--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "@iconify/react": "^4.1.1"
+    "@iconify/react": "^4.1.1",
+    "dotenv": "^16.3.1"
   }
 }
